--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             эффективно снижают стресс и чувство одиночества — регулярное поглаживание питомца нормализует уровень
             кортизола и стимулирует выработку «гормонов счастья». Их мурлыкание, работающее в диапазоне 20–140 Гц,
             обладает терапевтическим эффектом: ускоряет восстановление тканей и облегчает хронические боли.
-        <li><a href="https://www.kubsu.ru/lib/images/Group3288.png">Ссылка на фрагмент стороннего сайта</a></li>
+        <li><a href="https://www.kubsu.ru/#section-header">Ссылка на фрагмент стороннего сайта</a></li>
 
         <li>Ссылки из прямоугольных и круглых областей картинки</li>
         <img src="aaa.png" usemap="#element">
@@ -129,3 +129,4 @@
 
 
 </body>
+
